[package]
name = "kpush"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
html-escape = "0.2.13"
ureq = "3.1.2"
env_logger = { version = "0.11.8", optional = true }

[profile.release]
strip = true
lto = true

[features]
proxy = []
log = ["dep:env_logger"]
